--- a/web/default.conf
+++ b/web/default.conf
@@ -5,8 +5,8 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location /app {
-        root   /usr/share/nginx/html;
+    location / {
+        root   /app;
         index  index.html index.htm;
     }
 
