--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -1,8 +1,9 @@
+
 user  nginx;
-worker_processes  auto;
+worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+pid        /tmp/nginx.pid;
 
 
 events {
@@ -11,6 +12,12 @@ events {
 
 
 http {
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path       /tmp/proxy_temp_path;
+    fastcgi_temp_path     /tmp/fastcgi_temp;
+    uwsgi_temp_path       /tmp/uwsgi_temp;
+    scgi_temp_path        /tmp/scgi_temp;
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -19,7 +26,6 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
-    client_body_temp_path /etc/nginx;
 
     sendfile        on;
     #tcp_nopush     on;
