--- a/web/web-pod.yml
+++ b/web/web-pod.yml
@@ -1,21 +1,23 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: web
+  labels:
+    app: nginx
 spec:
   containers:
-    - name: nginx
-      image: doped/nginx-without-su:latest
-      volumeMounts:
-        - name: app
-          mountPath: /app
-  initContainers:        
-    - name: init
-      image: busybox:1.31.0
-      volumeMounts:
-        - name: app
-          mountPath: /app
-      command: ['sh', '-c', 'wget -O- https://raw.githubusercontent.com/express42/otus-platform-snippets/master/Module-02/Introduction-to-Kubernetes/wget.sh | sh']
-  volumes:
+  - name: web
+    image: doped/nginx-without-su:latest
+    volumeMounts:
     - name: app
-      emptyDir: {}
+      mountPath: /app
+  initContainers:
+  - name: init-web
+    image: busybox:1.31.0
+    volumeMounts:
+    - name: app
+      mountPath: /app
+    command: ['sh', '-c', 'wget -O- --no-check-certificate https://raw.githubusercontent.com/express42/otus-platform-snippets/master/Module-02/Introduction-to-Kubernetes/wget.sh | sh']
+  volumes:
+  - name: app
+    emptyDir: {}
