--- a/kubernetes-intro/web-pod.yaml
+++ b/kubernetes-intro/web-pod.yaml
@@ -8,6 +8,8 @@ spec:
   containers:
   - name: web
     image: doped/nginx-without-su:latest
+    livenessProbe:
+      tcpSocket: { port: 8000 }    
     volumeMounts:
     - name: app
       mountPath: /app
